# Mystic-GameEngine

./: .gitignore  CMakeLists.txt  RY_Game.sln  unique.txt
Mystic/: CMakeLists.txt  Events.cpp  Events.h  GameWindow.cpp  GameWindow.h  Keys.h  Mystic.vcxproj  Mystic.vcxproj.filters  MysticApp.cpp  MysticApp.h  Picture.cpp  Picture.h  PictureImplementation.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Unit.cpp  Unit.h  Utilities.h  WindowImplementation.h  pch.h  placeholder.cpp
Mystic/GLFWCode/: GLFWImplementation.cpp  GLFWImplementation.h  OpenGLPicture.cpp  OpenGLPicture.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
Mystic/include/: Mystic.h
RY_Game/: CMakeLists.txt  Game.cpp  Game.h  RY_Game.vcxproj  main.cpp
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
